--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,13 +40,46 @@
             android:id="@+id/main_select"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="选择"
+            android:text="去 选图"
             android:textColor="#ffffff"
             android:textSize="16sp"
             android:gravity="center"
-            android:background="#0099ff"
+            android:background="@drawable/shape_r12"
+            android:backgroundTint="#0099ff"
             app:layout_constraintTop_toBottomOf="@id/main_rec"
             android:layout_margin="10dp"/>
+
+        <LinearLayout
+            android:id="@+id/layout_option"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="#ddcccc"
+            android:padding="@dimen/dp_10"
+            android:layout_margin="@dimen/dp_10"
+            app:layout_constraintTop_toBottomOf="@id/main_select"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rb_select_with_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="选择图库带入已选"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/main_select_list"
@@ -56,7 +89,7 @@
             android:padding="5dp"
             android:textSize="13sp"
             android:background="#eeeeee"
-            app:layout_constraintTop_toBottomOf="@id/main_select"
+            app:layout_constraintTop_toBottomOf="@id/layout_option"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
