--- a/picPicker/src/main/res/layout/adapter_image_list_item.xml
+++ b/picPicker/src/main/res/layout/adapter_image_list_item.xml
@@ -27,13 +27,13 @@
         android:id="@+id/checkView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
+        android:layout_gravity="end"
         android:clickable="true"
         android:descendantFocusability="blocksDescendants"
-        android:paddingBottom="24dp"
-        android:paddingLeft="24dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
         android:paddingRight="10dp"
-        android:paddingTop="12dp">
+        android:paddingTop="10dp">
 
         <com.pic.picker.view.SuperCheckBox
             android:id="@+id/cb_check"
