--- a/picPicker/src/main/res/layout/adapter_image_list_item.xml
+++ b/picPicker/src/main/res/layout/adapter_image_list_item.xml
@@ -20,7 +20,7 @@
         android:id="@+id/mask"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#88000000"
+        android:background="#66000000"
         android:visibility="gone" />
 
     <FrameLayout
@@ -28,21 +28,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:clickable="true"
         android:descendantFocusability="blocksDescendants"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="10dp"
+        android:paddingBottom="18dp"
+        android:paddingStart="18dp"
+        android:paddingEnd="10dp"
         android:paddingTop="10dp">
 
-        <com.pic.picker.view.SuperCheckBox
-            android:id="@+id/cb_check"
-            style="@style/SuperCheckboxTheme"
+<!--        <com.pic.picker.view.SuperCheckBox-->
+<!--            android:id="@+id/cb_check"-->
+<!--            style="@style/SuperCheckboxTheme"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:clickable="false"-->
+<!--            android:duplicateParentState="true"-->
+<!--            android:enabled="false"-->
+<!--            android:focusable="false" />-->
+
+        <com.pic.picker.view.CheckTextView
+            android:id="@+id/tv_check_num"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:duplicateParentState="true"
-            android:enabled="false"
-            android:focusable="false" />
+            android:layout_height="20dp"
+            android:minWidth="20dp"
+            android:gravity="center"
+            android:paddingStart="3dp"
+            android:paddingEnd="3dp"
+            android:textColor="#ffffff"
+            android:textSize="13sp"/>
+
     </FrameLayout>
+
 </FrameLayout>
