--- a/picPicker/src/main/res/layout/activity_image_free_crop.xml
+++ b/picPicker/src/main/res/layout/activity_image_free_crop.xml
@@ -45,8 +45,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_centerInParent="true"
-                android:indeterminateTint="@color/ip_pb_color"
-                />
+                android:indeterminateTint="@color/ip_color_accent" />
 
         </RelativeLayout>
     </FrameLayout>
