--- a/picPicker/src/main/res/layout/ip_dialog_loading.xml
+++ b/picPicker/src/main/res/layout/ip_dialog_loading.xml
@@ -19,10 +19,8 @@
         <ProgressBar
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:indeterminateTint="@color/ip_pb_color"
-            android:layout_centerInParent="true"
-            />
-
+            android:indeterminateTint="@color/ip_color_accent"
+            android:layout_centerInParent="true"/>
 
     </RelativeLayout>
 </FrameLayout>
