--- a/app/src/main/res/layout/item_grid_pic_upload.xml
+++ b/app/src/main/res/layout/item_grid_pic_upload.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.bese.lib.picker.view.ImageRectView
+    <com.bese.view.ImageRectView
         android:id="@+id/item_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.bese.lib.picker.view.ImageRectView
+    <View
         android:id="@+id/item_mask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#7fffffff"
+        android:background="#7FFFFFFF"
         android:visibility="gone"
-        android:layout_margin="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.bese.lib.picker.view.ImageRectView
-        android:id="@+id/item_delete"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@mipmap/delete"
+    <ImageView
+        android:id="@+id/item_pic_delete"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_margin="3dp"
+        android:src="@drawable/ic_pic_delete"
         android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -36,8 +41,8 @@
     <ProgressBar
         android:id="@+id/item_upload_process"
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_margin="10dp"
+        android:layout_height="3dp"
+        android:layout_marginEnd="15dp"
         android:visibility="gone"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:progressDrawable="@drawable/pic_upload_process"
